--- a/public/views/maps/index.html
+++ b/public/views/maps/index.html
@@ -24,7 +24,6 @@
             <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#home">Map search</a></li>
                 <li><a data-toggle="tab" href="#map/newMap">New map</a></li>
-                <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
             </ul>
             
             <div class="panel-body">
@@ -33,14 +32,34 @@
                         <h3 class="panel-title"><i class="fa fa-search"></i> Find a map</h3>                        
                     </div>
 
-                    <div class="panel-body">
-                        Tipo de mapa
-                        
-                        </br>
-                        
-                        Formulario de busqueda de mapas
+                    <div class="panel-body">      
+                        <div class="row">      
+                            <div class="col-sm-4">
+                                <label>Name</label>
+                                 <input class="form-control" />
+                            </div>
+                            
+                            <div class="col-sm-4">
+                                <label>Type</label>
+                                <select ng-model="map.type" class="form-control">
+                                    <option value="private">Private</option>
+                                    <option value="public">Public</option>
+                                </select>
+                            </div>
+                            
+                            <div class="col-sm-4">
+                                <label>City</label>
+                                <input class="form-control" />
+                            </div>
+                            
+                            <div class="col-sm-4">
+                                <br/>
+                                <input type="submit" class="btn btn-primary" value="Search">
+                            </div>
+                            
+                            
+                        </div>
                     </div>
-                    
                 </div>
 
                 <div class="panel panel-primary">
