--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -67,15 +67,12 @@
                             <div class="btn-group">
                                 <button type="button" class="btn btn-default dropdown-toggle" 
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Action <span class="caret"></span>
+                                    Actions <span class="caret"></span>
                                 </button>
  
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
+                                    <li><a href="#">Export map</a></li>
+                                    <li><a href="#">Finish simulation</a></li>
                                 </ul>
                             </div>
                         </ul>
@@ -83,6 +80,134 @@
                         <a id="export-png" class="btn" download="map.png"><i class="icon-download"></i> Export PNG</a> 
                         <br/>
                         <img id="captura" style="height: 50%;width: 50%;">
+
+                          <!-- Table -->
+                          
+                        <table class="table">
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Bar numero 1</td>
+                                    <td>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>Restaurante num 1</td>
+                                    <td>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                    </td>
+                                </tr>
+                                
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>Larry</td>
+                                    <td>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star-half"></div>
+                                    </td>
+                                </tr> 
+                                
+                                <tr>
+                                    <th scope="row">4</th>
+                                    <td>Bar numero 1</td>
+                                    <td>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star-half"></div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <th scope="row">5</th>
+                                    <td>Restaurante num 1</td>
+                                    <td>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star-o"></div>
+                                    </td>
+                                </tr>
+                                
+                                <tr>
+                                    <th scope="row">6</th>
+                                    <td>Larry</td>
+                                    <td>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star-o"></div>
+                                    </td>
+                                </tr> 
+                                
+                                
+                                <tr>
+                                    <th scope="row">7</th>
+                                    <td>Bar numero 1</td>
+                                    <td>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star-half"></div>
+                                        <div class="fa fa-star-o"></div>
+                                        <div class="fa fa-star-o"></div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <th scope="row">8</th>
+                                    <td>Restaurante num 1</td>
+                                    <td>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star-o"></div>
+                                        <div class="fa fa-star-o"></div>
+                                        <div class="fa fa-star-o"></div>
+                                    </td>
+                                </tr>
+                                
+                                <tr>
+                                    <th scope="row">9</th>
+                                    <td>Larry</td>
+                                    <td>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star-half"></div>
+                                        <div class="fa fa-star-o"></div>
+                                        <div class="fa fa-star-o"></div>
+                                        <div class="fa fa-star-o"></div>
+                                    </td>
+                                </tr>
+                                
+                                <tr>
+                                    <th scope="row">10</th>
+                                    <td>Bar numero 1</td>
+                                    <td>
+                                        <div class="fa fa-star"></div>
+                                        <div class="fa fa-star-half"></div>
+                                        <div class="fa fa-star-o"></div>
+                                        <div class="fa fa-star-o"></div>
+                                        <div class="fa fa-star-o"></div>
+                                    </td>
+                                </tr>
+        
+                            </tbody>
+                        </table>                        
                     </div>
                 </div>							
             </div>            
