--- a/public/views/configurations/index.html
+++ b/public/views/configurations/index.html
@@ -22,12 +22,43 @@
             
             <div id="page-wrapper">		                
                 <ul class="nav nav-tabs">
-                  <li class="active"><a data-toggle="tab" href="#home">Profile</a></li>
-                  <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
+                  <li class="active"><a data-toggle="tab" href="#configurations">Profile</a></li>
+                  <li><a data-toggle="tab" href="#mapConfigurations">Maps</a></li>
                   <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
                 </ul>
                 
                 <div class="panel-body">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Change password</h3>
+                        </div>
+
+                        <div class="panel-body">
+                            <div class="row">                                            
+                                <div class="col-lg-4">
+                                    Aqui van los campos para cambiar de contraseña
+                                </div>
+                            </div>
+                        </div>
+                    </div>                     
+                    
+                    
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Change username</h3>
+                        </div>
+
+                        <div class="panel-body">
+                            <div class="row">                                            
+                                <div class="col-lg-4">
+                                    Aqui van los campos para cambiar el nombre del usuario
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    
+                    
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Upload photo</h3>
