--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -25,21 +25,21 @@
                 <li><a data-toggle="tab" href="#map">Map search</a></li>
                 <li class="active"><a data-toggle="tab" href="#newMap">New map</a></li>
             </ul>
-                
+
             <div class="panel-body">  
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h3 class="panel-title"><i class="fa fa-plus-circle"></i> Basic data</h3>
+                        <h3 class="panel-title"><i class="fa fa-plus-circle"></i> Create new map for a simulation </h3>
                     </div>
 
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-6">
+                            <div class="col-xs-4">
                                 <label>Name</label>
                                 <input class="form-control" ng-model="map.name" />
                             </div>
                                     
-                            <div class="col-xs-6">
+                            <div class="col-xs-4">
                                 <label>Type</label>
                                 <select ng-model="map.type" class="form-control">
                                     <option value="private">Private</option>
@@ -47,24 +47,66 @@
                                 </select>
                             </div>
     
+                            <div class="col-xs-4">
+                                <label>State</label>
+                                <select ng-model="map.state" class="form-control">
+                                    <option value="draft">Draft</option>
+                                    <option value="active">Active</option>
+                                </select>
+                            </div>
+                            
+                            <div class="col-xs-12">
+                                                                  
+                                <b>
+                                    <i>* Click on the map to indicate its initial position to start the simulation 
+                                    or enter the coordinates manually
+                                    </i>
+                                </b>    
+                            </div>  
+                            
                             <div class="col-xs-12">
                                 </br>                              
                                 <label>Static objects</label>    
                                 <input type="file" name='imgPerfil'>     
-                                <b><i>* File containing these static objects on the map, that is, don't changing geographical position during the simulation</i></b>    
+                                <b>
+                                    <i>* File containing these static objects on the map, that is, don't 
+                                        changing geographical position during the simulation
+                                    </i>
+                                </b>    
                             </div>  
                                       
                             <div class="col-xs-12">           
                                 </br>      
                                 <label>Dynamic objects</label>         
                                 <input type="file" name='imgPerfil'>      
-                                <b><i>* File containing dynamic objects of the map, that is, the changing geographic position during the simulation such as automobiles</i></b>   
+                                <b>
+                                    <i>* File containing dynamic objects of the map, that is, the changing 
+                                    geographic position during the simulation such as automobiles
+                                    </i>
+                                </b>   
                             </div>   
+                    
+                            <div class="col-xs-6">
+                                </br>
+                                <label>Initial position: latitude</label>
+                                <input id="initPosLat" class="form-control" ng-model="map.name" />
+                            </div>
+                            
+                            <div class="col-xs-6">
+                                </br>
+                                <label>Initial position: longitude</label>
+                                 <input id="initPosLong" class="form-control" ng-model="map.name" />
+                            </div>                    
                       
                             <div class="col-xs-12">       
                                 </br>         
-                                <label>City</label>         
-                                <input ng-model="map.city" class="form-control">  
+                                <label>City</label>  
+                                <div class="input-group">
+                                    <input type="text" class="form-control" placeholder="Search for...">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-default" type="button">Go!</button>
+                                    </span>
+                                </div>
                             </div>   
                         </div>
                             
@@ -82,13 +124,18 @@
                                     })   
                                 ],      
                                 view: new ol.View({            
-                                    center: ol.proj.transform([-0.88824, 41.66991], 'EPSG:4326', 'EPSG:3857'),             
+                                    center: ol.proj.transform([-0.88824, 41.66991], 'EPSG:4326', 'EPSG:3857'),        
                                     zoom: 15           
                                 }),       
                                 controls: ol.control.defaults().extend([      
                                     new ol.control.FullScreen() 
                                 ])        
                             });          
+                            
+                            map.on('singleclick', function(evt) {
+                                $('#initPosLat').val(evt.coordinate[0]);
+                                $('#initPosLong').val(evt.coordinate[1]);
+                            });
                         </script>
                                 
                                 <!--<script>
