--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -89,13 +89,13 @@
                             <div class="col-xs-6">
                                 </br>
                                 <label>Initial position: latitude</label>
-                                <input id="initPosLat" class="form-control" ng-model="map.name" />
+                                <input id="initPosLat" class="form-control" ng-model="map.name" disabled/>
                             </div>
                             
                             <div class="col-xs-6">
                                 </br>
                                 <label>Initial position: longitude</label>
-                                 <input id="initPosLong" class="form-control" ng-model="map.name" />
+                                 <input id="initPosLong" class="form-control" ng-model="map.name" disabled/>
                             </div>                    
                       
                             <div class="col-xs-12">       
