--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -77,7 +77,7 @@
                             </div>
                         </ul>
                         
-                        <a id="export-png" class="btn" download="map.png"><i class="icon-download"></i> Export PNG</a> 
+                         <!-- <a id="export-png" class="btn" download="map.png"><i class="icon-download"></i> Export PNG</a> 
                         <br/>
                         <img id="captura" style="height: 50%;width: 50%;">
 
