--- a/public/views/maps/index.html
+++ b/public/views/maps/index.html
@@ -22,7 +22,7 @@
         
         <div id="page-wrapper">		
             <ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#home">Map search</a></li>
+                <li class="active"><a data-toggle="tab" href="#map">Map search</a></li>
                 <li><a data-toggle="tab" href="#map/newMap">New map</a></li>
             </ul>
             
@@ -74,7 +74,12 @@
                                 <label>End date</label>
                                 <input class="form-control" type="date"/>
                             </div>
-                            
+                
+                            <div class="col-sm-12">
+                                </br>
+                                <input type="checkbox" value="onlyMyMaps" value="onlyMyMaps"> search only my maps</input>
+                            </div>
+                
                             <div class="col-sm-4">
                                 <br/>
                                 <input type="submit" class="btn btn-primary" value="Search">
@@ -108,26 +113,34 @@
                                 <td>Draft</td>
                                 <td>Zaragoza</td>
                                 <td>01/10/2015</td>
-                                <td>
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-primary">
-                                          View options
-                                        </button>
-                                        
-                                        <button type="button" class="btn btn-primary dropdown-toggle" 
-                                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <span class="caret"></span>
-                                        <span class="sr-only">Toggle Dropdown</span>
-                                        </button>
-                                        
-                                      <ul class="dropdown-menu">
-                                        <li><a href="#">Start simulation</a></li>
-                                        <li><a href="#">Configurations</a></li>
-                                        <li><a href="#">Change state</a></li>
-                                        <li role="separator" class="divider"></li>
-                                        <li><a href="#">Delete map</a></li>
-                                      </ul>
-                                    </div>
+                                <td>    
+                                    <ul class="nav nav-tabs">  
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-primary dropdown-toggle" 
+                                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                    Actions <span class="caret"></span>
+                                            </button>
+
+                                            <ul class="dropdown-menu">
+                                                <li><a href="#map" role="button" 
+                                                       data-toggle="modal" data-target="#startSimulationModal">Start simulation</a></li>
+                                                
+                                                <li><a href="#map" role="button" 
+                                                       data-toggle="modal" data-target="#configModal">Configurations</a>
+                                                </li>
+                                                
+                                                <li><a href="#map"role="button" 
+                                                       data-toggle="modal" data-target="#changeStateModal">Change state</a></li>
+                                                
+                                                <li><a href="#map" role="button" 
+                                                       data-toggle="modal" data-target="#exportMapModal">Export map</a></li>
+                                                
+                                                <li role="separator" class="divider"></li>
+                                                
+                                                <li><a href="#map" role="button" data-toggle="modal" data-target="#deleteMapModal">Delete map</a></li>
+                                            </ul>
+                                        </div>
+                                    </ul>
                                 </td> 
                             </tr>
                               
@@ -172,6 +185,132 @@
                     </nav>
                 </div>
             </div>    
-        </div>    
+        </div>
+
+        <!-- Start simulation confirmation Modal -->
+        <div class="modal fade" role="dialog" id="startSimulationModal">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Confirmation</h4>
+              </div>
+                
+              <div class="modal-body">
+                  <p>Are you sure you want to start the simulation?</p>
+              </div>
+                
+              <div class="modal-footer">  
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-success" data-dismiss="modal">Start</button>  
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <!-- configuration Modal -->
+        <div class="modal fade" role="dialog" id="configModal">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Configurations</h4>
+              </div>
+                
+              <div class="modal-body">
+                  <p>
+                    Aqui van las configuraciones del mapa
+                  </p>
+              </div>
+                
+              <div class="modal-footer">  
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>  
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <!-- Change state Modal -->
+        <div class="modal fade" role="dialog" id="changeStateModal">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Change state</h4>
+              </div>
+                
+              <div class="modal-body">
+                  <p>
+                    cambiar el estdo del mapa
+                  </p>
+              </div>
+                
+              <div class="modal-footer">  
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>  
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <!-- export map Modal -->
+        <div class="modal fade" role="dialog" id="exportMapModal">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Export map</h4>
+              </div>
+                
+              <div class="modal-body">
+                  <p>
+                    Datos para la exportacion del mapa
+                  </p>
+              </div>
+                
+              <div class="modal-footer">  
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Export</button>  
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <!-- Delete modal Modal -->
+        <div class="modal fade" role="dialog" id="deleteMapModal">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Confirmation</h4>
+              </div>
+                
+              <div class="modal-body">
+                <p>Are you sure you want to delete this map?</p>
+              </div>
+                
+              <div class="modal-footer">  
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Delete</button>  
+              </div>
+            </div>
+
+          </div>
+        </div>
     </div>
 </div>
