--- a/public/views/configurations/index.html
+++ b/public/views/configurations/index.html
@@ -23,7 +23,7 @@
             <div id="page-wrapper">		                
                 <ul class="nav nav-tabs">
                   <li class="active"><a data-toggle="tab" href="#configurations">Profile</a></li>
-                  <li><a data-toggle="tab" href="#mapConfigurations">Maps</a></li>
+                  <li><a data-toggle="tab" href="#configurations/mapConfigurations">Maps</a></li>
                   <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
                 </ul>
                 
@@ -36,8 +36,24 @@
                         <div class="panel-body">
                             <div class="row">                                            
                                 <div class="col-lg-4">
-                                    Aqui van los campos para cambiar de contraseña
+                                    <label>Current password</label>
+                                    <input class="form-control" type="text"/>
                                 </div>
+                                
+                                <div class="col-lg-4">
+                                    <label>New Password</label>
+                                    <input class="form-control" type="text"/>
+                                </div>
+                                
+                                <div class="col-lg-4">
+                                    <label>Repeat new password</label>
+                                    <input class="form-control" type="text"/>
+                                </div>
+                                
+                                <div class="col-xs-12">
+                                    <br/>
+                                    <input type="submit" class="btn btn-primary" value="Save">
+                                 </div>                            
                             </div>
                         </div>
                     </div>                     
@@ -49,16 +65,30 @@
                         </div>
 
                         <div class="panel-body">
-                            <div class="row">                                            
+                            <div class="row">     
                                 <div class="col-lg-4">
-                                    Aqui van los campos para cambiar el nombre del usuario
+                                    <label>Actual username</label>
+                                    <input class="form-control" type="text"/>
                                 </div>
+                                
+                                <div class="col-lg-4">
+                                    <label>New username</label>
+                                    <input class="form-control" type="text"/>
+                                </div>
+                                
+                                <div class="col-lg-4">
+                                    <label>Repeat new username</label>
+                                    <input class="form-control" type="text"/>
+                                </div>
+                                
+                                <div class="col-xs-12">
+                                    <br/>
+                                    <input type="submit" class="btn btn-primary" value="Save">
+                                 </div>
                             </div>
                         </div>
                     </div>
-                    
-                    
-                    
+
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Upload photo</h3>
