--- a/public/views/maps/index.html
+++ b/public/views/maps/index.html
@@ -90,84 +90,87 @@
                     </div>
                 </div>
 
-                <div class="panel panel-primary">
+                <div class="panel panel-primary table-responsive">
                     <div class="panel-heading">
                         <h3 class="panel-title"><i class="fa fa-list-alt"></i> Search Results</h3>
                     </div>
                     
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Type</th>
-                                <th>State</th>
-                                <th>City</th>
-                                <th>Creation date</th>
-                                <th>Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Actur simulation</td>
-                                <td>Private</td>
-                                <td>Draft</td>
-                                <td>Zaragoza</td>
-                                <td>01/10/2015</td>
-                                <td>    
-                                    <ul class="nav nav-tabs">  
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-primary dropdown-toggle" 
-                                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                    Actions <span class="caret"></span>
-                                            </button>
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Creator</th>
+                                    <th>Type</th>
+                                    <th>State</th>
+                                    <th>City</th>
+                                    <th>Creation date</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Actur simulation</td>
+                                    <td>user name 1</td>
+                                    <td>Private</td>
+                                    <td>Draft</td>
+                                    <td>Zaragoza</td>
+                                    <td>01/10/2015</td>
+                                    <td>    
+                                        <ul class="nav nav-tabs">  
+                                            <div class="btn-group">
+                                                <button type="button" class="btn btn-primary dropdown-toggle" 
+                                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                        Actions <span class="caret"></span>
+                                                </button>
 
-                                            <ul class="dropdown-menu">
-                                                <li><a href="#map" role="button" 
-                                                       data-toggle="modal" data-target="#startSimulationModal">Start simulation</a></li>
-                                                
-                                                <li><a href="#map" role="button" 
-                                                       data-toggle="modal" data-target="#configModal">Configurations</a>
-                                                </li>
-                                                
-                                                <li><a href="#map"role="button" 
-                                                       data-toggle="modal" data-target="#changeStateModal">Change state</a></li>
-                                                
-                                                <li><a href="#map" role="button" 
-                                                       data-toggle="modal" data-target="#exportMapModal">Export map</a></li>
-                                                
-                                                <li role="separator" class="divider"></li>
-                                                
-                                                <li><a href="#map" role="button" data-toggle="modal" data-target="#deleteMapModal">Delete map</a></li>
-                                            </ul>
-                                        </div>
-                                    </ul>
-                                </td> 
-                            </tr>
-                              
-                            <tr>
-                                <td>Madrid simulation center</td>
-                                <td>Public</td>
-                                <td>Active</td>
-                                <td>Madrid</td>
-                                <td>01/05/2014</td>
-                                <td>
-                                    <button type="button" class="btn btn-success">Start simulation</button>
-                                </td>
-                            </tr>
-                            
-                            <tr>
-                                <td>Manhattan simulation</td>
-                                <td>Public</td>
-                                <td>Draft</td>
-                                <td>New York</td>
-                                <td>01/04/2014</td>
-                                <td>
-                                    <button type="button" class="btn btn-success disabled">Start simulation</button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                                                <ul class="dropdown-menu">
+                                                    <li><a href="#map" role="button" 
+                                                           data-toggle="modal" data-target="#startSimulationModal">Start simulation</a></li>
+
+                                                    <li><a href="#map" role="button" 
+                                                           data-toggle="modal" data-target="#configModal">Configurations</a>
+                                                    </li>
+
+                                                    <li><a href="#map" role="button" 
+                                                           data-toggle="modal" data-target="#exportMapModal">Export map</a></li>
+
+                                                    <li role="separator" class="divider"></li>
+
+                                                    <li><a href="#map" role="button" data-toggle="modal" data-target="#deleteMapModal">Delete map</a></li>
+                                                </ul>
+                                            </div>
+                                        </ul>
+                                    </td> 
+                                </tr>
+
+                                <tr>
+                                    <td>Madrid simulation center</td>
+                                    <td>user name 2</td>
+                                    <td>Public</td>
+                                    <td>Active</td>
+                                    <td>Madrid</td>
+                                    <td>01/05/2014</td>
+                                    <td>
+                                        <button type="button" class="btn btn-success" 
+                                                data-toggle="modal" data-target="#startSimulationModal">Start simulation</button>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td>Manhattan simulation</td>
+                                    <td>user name 3</td>
+                                    <td>Public</td>
+                                    <td>Draft</td>
+                                    <td>New York</td>
+                                    <td>01/04/2014</td>
+                                    <td>
+                                        <button type="button" class="btn btn-success disabled">Start simulation</button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     
+                        
                     <nav align="center">
                         <ul class="pagination">
                             <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
@@ -223,35 +226,103 @@
               </div>
                 
               <div class="modal-body">
-                  <p>
-                    Aqui van las configuraciones del mapa
-                  </p>
-              </div>
-                
-              <div class="modal-footer">  
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>  
-              </div>
-            </div>
+                <div class="panel-body">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><i class="fa fa-search"></i> Basic data</h3>                        
+                        </div>
 
-          </div>
-        </div>
+                        <div class="panel-body">                      
+                              <div class="row">
+                                    <div class="col-sm-6">
+                                      <label>Name</label>
+                                      <input class="form-control" value="Actur simulation" disabled/>
+                                    </div>
 
-        <!-- Change state Modal -->
-        <div class="modal fade" role="dialog" id="changeStateModal">
-          <div class="modal-dialog">
+                                    <div class="col-sm-6">
+                                      <label>Creator</label>
+                                      <input class="form-control" value="user name 1" disabled/>
+                                    </div>
+                                  
+                                    <div class="col-sm-6">
+                                      <label>City</label>
+                                      <input class="form-control" value="Zaragoza" disabled/>
+                                    </div>
 
-            <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Change state</h4>
-              </div>
-                
-              <div class="modal-body">
-                  <p>
-                    cambiar el estdo del mapa
-                  </p>
+                                    <div class="col-sm-6">
+                                        <label>Start date</label>
+                                        <input class="form-control" value="01/10/2015" disabled/>
+                                    </div>
+
+                                    <div class="col-sm-6">
+                                        <label>Type</label>
+                                        <select class="form-control">
+                                            <option value="all">All</option>
+                                            <option value="private">Private</option>
+                                            <option value="public">Public</option>
+                                        </select>
+                                    </div>
+
+                                    <div class="col-sm-6">
+                                        <label>State</label>
+                                        <select  class="form-control">
+                                            <option value="All">All</option>
+                                            <option value="draft">Draft</option>
+                                            <option value="active">Active</option>
+                                        </select>
+                                    </div>                        
+
+                                    <div class="col-sm-6">
+                                        <label>End date</label>
+                                        <input class="form-control" type="date"/>
+                                    </div>
+                                </div> 
+                        </div>
+                    </div>
+                </div>    
+                  
+                <div class="panel-body">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><i class="fa fa-search"></i> Dynamic objects</h3>                        
+                        </div>
+
+                        <div class="panel-body">                      
+                              <div class="row">
+                                    <div class="col-xs-12">
+                                        <label>Dynamic objects</label>
+                                        <input type="file" name='imgPerfil'>
+                                        <b><i>* Dynamic map objects will be replaced</i></b>
+                                    </div>
+                                </div> 
+                        </div>
+                    </div>
+                </div>
+
+                  <div class="panel-body">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><i class="fa fa-search"></i> Simulation parameters</h3>                        
+                        </div>
+
+                        <div class="panel-body">                      
+                            <div class="row">
+                                  <div class="col-xs-6">
+                                      <label>Recommended maximum number of places</label>
+                                      <input class="form-control" type="text">
+                                  </div>
+
+                                  <div class="col-xs-6">
+                                      <label>Maximum number of users supported</label>
+                                      <input class="form-control" type="text">
+                                  </div>
+                                  
+                                  
+
+                            </div> 
+                        </div>
+                    </div>
+                </div>                                  
               </div>
                 
               <div class="modal-footer">  
